--- a/Source/iOS/ConstructiveEditor/Resources/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Source/iOS/ConstructiveEditor/Resources/en.lproj/MainStoryboard_iPhone.storyboard
@@ -915,7 +915,7 @@
             <objects>
                 <viewController id="dwe-AE-hYd" customClass="EditDetailTypeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SrZ-G1-VA6">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Label" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GYv-hC-aI5">
@@ -1018,125 +1018,6 @@
         <image name="transform_Highlighted_iPhone.png" width="30" height="30"/>
         <image name="transform_Normal_iPhone.png" width="30" height="30"/>
     </resources>
-    <classes>
-        <class className="AssembliesAndDetailsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AssembliesAndDetailsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_assembliesAndDetailsTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="_detachButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_exportButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_preferencesButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_rotateButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_splitButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_transformButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="AssemblyCellView" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AssemblyCellView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="countLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="countStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="picture" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="DetailCellView" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailCellView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="countLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="countStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="picture" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="DetailTypeCellView" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailTypeCellView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="picture" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="DetailTypesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailTypesViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_connectionPointButton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="_detailTypesTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="EditAssemblyViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditAssemblyViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onCountChanged:"/>
-                <relationship kind="action" name="onDoneButtonPressed:"/>
-                <relationship kind="action" name="onDragOnParentImage:" candidateClass="UIPanGestureRecognizer"/>
-                <relationship kind="action" name="onImagePressed:"/>
-                <relationship kind="action" name="onNextPointPressed:"/>
-                <relationship kind="action" name="onPreviousPointPressed:"/>
-                <relationship kind="action" name="onTapOnImage:" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="action" name="onTapOnParentImage:" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="outlet" name="_constraintViewAspectFitHeight" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_constraintViewAspectFitWidth" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_containerViewForParentImageView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="_countLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_countStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="_doneButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_imageViewParent" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_tapOnParentImageGestureRecognizer" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="outlet" name="_viewAspectFit" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="EditDetailTypeViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditDetailTypeViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_constraintImageViewLeadingSpaceToSuperview" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_constraintPickerTrainlingSpaceToSuperview" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_constraintVerticalSpaceFromPickerToImageView" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_detailClassPicker" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="_detailLabelTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="_detailLengthLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_detailLengthStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="_pictureImageView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="EditDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onBackPressed:"/>
-                <relationship kind="action" name="onCountChanged:"/>
-                <relationship kind="action" name="onDonePressed:"/>
-                <relationship kind="action" name="onDragOnParentImage:" candidateClass="UIPanGestureRecognizer"/>
-                <relationship kind="action" name="onImagePressed:"/>
-                <relationship kind="action" name="onTapOnParentImage:" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="outlet" name="_constraintViewAspectFitHeight" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_constraintViewAspectFitWidth" candidateClass="NSLayoutConstraint"/>
-                <relationship kind="outlet" name="_containerViewForParentImageView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="_countLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="_countStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="_doneButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_imageViewParent" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="_tapOnParentImageGestureRecognizer" candidateClass="UITapGestureRecognizer"/>
-                <relationship kind="outlet" name="_viewAspectFit" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RootAssemblyViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootAssemblyViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_exportButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_preferencesButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_rootAssemblyTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="StartMenuViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/StartMenuViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="_documentsTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="_newDocumentCreateButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="_newDocumentNameTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
@@ -1145,7 +1026,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="YU5-mj-WCP"/>
         <segue reference="2U8-C6-nGa"/>
-        <segue reference="Kt3-Kg-qnc"/>
+        <segue reference="6og-4r-VGt"/>
         <segue reference="NZ4-iz-omb"/>
     </inferredMetricsTieBreakers>
 </document>
